--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>国策咨询</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -413,7 +413,7 @@
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>风格</strong></h5>
                         
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">一种而独特的风格，不拘泥于常规，敢于尝试新鲜事物，追求创意与效果的完美结合。<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">一种独特的风格，不拘泥于常规，敢于尝试新鲜事物，追求创意与效果的完美结合。<br></p>
                     </div>
                     
                 </div>
